--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.19",
     "next": "14.2.3",
     "react": "^18",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18"
   },
   "devDependencies": {
