--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
